--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <!-- AUTH SCREEN -->
   <div id="auth-screen" class="auth-container">
     <div class="auth-card">
-      <div class="logo">📚</div>
+      <img src="IMG_1337.jpeg" alt="Teacher Fin Coach Logo" class="logo-img">
       <h1>Teacher Fin Coach</h1>
       <p class="subtitle">Financial freedom for educators</p>
       
@@ -1137,4 +1137,5 @@
     
     let userData = {
       name: '',
+
       email: '',
