--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <div id="auth-screen" class="auth-container">
     <div class="auth-card">
       <img src="IMG_1337.jpeg" alt="Teacher Fin Coach Logo" class="logo-img">
-      <h1 style="font-family: 'Quicksand', 'Poppins', sans-serif; font-weight: 700; letter-spacing: -1px;">TeacherFinCoach</h1>
+      <h1 style="font-family: 'Righteous', sans-serif; font-weight: 700; letter-spacing: -1px;">TeacherFinCoach</h1>
       <p class="subtitle">Financial freedom for educators</p>
       
       <form id="signup-form">
