Add calculators page and connect to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -206,9 +206,9 @@
             <div class="mb-8">
                 <h2 class="text-2xl font-bold text-white mb-6">🧮 Tools & Resources</h2>
                 <div class="grid md:grid-cols-2 gap-6">
-                    <div class="bg-white rounded-xl shadow-md p-6 opacity-60">
+                    <a href="calculators.html" class="bg-white rounded-xl shadow-md p-6 block hover:shadow-lg transition">
                         <div class="flex items-center gap-4 mb-3">
-                            <div class="w-12 h-12 bg-gray-400 text-white rounded-full flex items-center justify-center text-2xl">
+                            <div class="w-12 h-12 bg-blue-600 text-white rounded-full flex items-center justify-center text-2xl">
                                 📊
                             </div>
                             <div>
@@ -216,8 +216,8 @@
                                 <p class="text-sm text-gray-600">4 interactive financial calculators</p>
                             </div>
                         </div>
-                        <span class="text-xs text-gray-500">Coming Soon</span>
-                    </div>
+                        <span class="text-blue-600 font-semibold text-sm">View →</span>
+                    </a>
 
                     <a href="terms.html" class="bg-white rounded-xl shadow-md p-6 block hover:shadow-lg transition">
                         <div class="flex items-center gap-4 mb-3">
