Update calculator with brand colors and remove WEP warning

--- a/income_gap_calculator.html
+++ b/income_gap_calculator.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2E5C8A 0%, #1B3A57 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -29,7 +29,7 @@
 
         .back-link {
             display: inline-block;
-            color: #667eea;
+            color: #6BC9BC;
             text-decoration: none;
             margin-bottom: 20px;
             font-weight: 500;
@@ -93,14 +93,14 @@
             display: block;
             margin-top: 8px;
             padding: 10px;
-            background: #e3f2fd;
+            background: #E8F7F5;
             border-radius: 5px;
             font-size: 14px;
-            color: #1976D2;
+            color: #2E5C8A;
         }
 
         .label-link a {
-            color: #1976D2;
+            color: #2E5C8A;
             font-weight: 600;
             text-decoration: none;
         }
@@ -124,7 +124,7 @@
         input[type="text"]:focus,
         select:focus {
             outline: none;
-            border-color: #667eea;
+            border-color: #6BC9BC;
         }
 
         .checkbox-container {
@@ -141,8 +141,8 @@
         }
 
         .checkbox-container:hover {
-            border-color: #667eea;
-            background: #f0f4ff;
+            border-color: #6BC9BC;
+            background: #E8F7F5;
         }
 
         .checkbox-container input[type="checkbox"] {
@@ -164,7 +164,7 @@
             padding: 25px;
             border-radius: 8px;
             margin-bottom: 25px;
-            border: 2px solid #667eea;
+            border: 2px solid #6BC9BC;
         }
 
         .spouse-section.active {
@@ -174,7 +174,7 @@
         .spouse-section-title {
             font-size: 18px;
             font-weight: 600;
-            color: #667eea;
+            color: #6BC9BC;
             margin-bottom: 20px;
             display: flex;
             align-items: center;
@@ -182,8 +182,8 @@
         }
 
         .coach-note {
-            background: #e3f2fd;
-            border-left: 4px solid #2196F3;
+            background: #E8F7F5;
+            border-left: 4px solid #6BC9BC;
             padding: 15px;
             margin: 20px 0;
             border-radius: 5px;
@@ -194,26 +194,13 @@
             content: "🏀 Coach Marty says: ";
             font-weight: bold;
             font-style: normal;
-            color: #1976D2;
-        }
-
-        .wep-warning {
-            background: #fff3cd;
-            border-left: 4px solid #ffc107;
-            padding: 15px;
-            margin-top: 10px;
-            border-radius: 5px;
-            font-size: 14px;
-        }
-
-        .wep-warning strong {
-            color: #856404;
+            color: #2E5C8A;
         }
 
         .calculate-btn {
             width: 100%;
             padding: 15px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2E5C8A 0%, #6BC9BC 100%);
             color: white;
             border: none;
             border-radius: 8px;
@@ -226,7 +213,7 @@
 
         .calculate-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 5px 15px rgba(46, 92, 138, 0.4);
         }
 
         .results {
@@ -242,7 +229,7 @@
             font-size: 24px;
             color: #333;
             margin-bottom: 20px;
-            border-bottom: 3px solid #667eea;
+            border-bottom: 3px solid #6BC9BC;
             padding-bottom: 10px;
         }
 
@@ -262,7 +249,7 @@
         }
 
         .breakdown-card.highlight {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2E5C8A 0%, #6BC9BC 100%);
             color: white;
             border: none;
         }
@@ -280,7 +267,7 @@
 
         .comparison-section {
             background: #fff;
-            border: 3px solid #667eea;
+            border: 3px solid #6BC9BC;
             border-radius: 12px;
             padding: 25px;
             margin: 30px 0;
@@ -288,7 +275,7 @@
 
         .comparison-title {
             font-size: 20px;
-            color: #667eea;
+            color: #2E5C8A;
             margin-bottom: 20px;
             font-weight: 600;
         }
@@ -315,7 +302,7 @@
         .comparison-amount {
             font-size: 24px;
             font-weight: bold;
-            color: #667eea;
+            color: #2E5C8A;
         }
 
         .savings-impact {
@@ -333,7 +320,7 @@
         }
 
         .info-box {
-            background: #e3f2fd;
+            background: #E8F7F5;
             padding: 20px;
             border-radius: 8px;
             margin: 20px 0;
@@ -341,7 +328,7 @@
 
         .info-box-title {
             font-weight: 600;
-            color: #1976D2;
+            color: #2E5C8A;
             margin-bottom: 10px;
         }
 
@@ -365,7 +352,7 @@
         }
 
         .step-number {
-            background: #667eea;
+            background: #2E5C8A;
             color: white;
             width: 30px;
             height: 30px;
@@ -512,12 +499,9 @@
 
             <div class="form-group">
                 <label for="socialSecurity">Expected Monthly Social Security
-                    <div class="label-hint"><strong>Don't know your estimate?</strong> <a href="https://www.ssa.gov/myaccount/" target="_blank" style="color: #1976D2; font-weight: 600;">Go to SSA.gov to get it</a></div>
+                    <div class="label-hint"><strong>Don't know your estimate?</strong> <a href="https://www.ssa.gov/myaccount/" target="_blank" style="color: #2E5C8A; font-weight: 600;">Go to SSA.gov to get it</a></div>
                 </label>
                 <input type="number" id="socialSecurity" placeholder="e.g., 1500" min="0" value="0" step="100">
-                <div class="wep-warning">
-                    <strong>⚠️ Teachers with pensions:</strong> Your Social Security may be reduced by the Windfall Elimination Provision (WEP). Use the SSA calculator for your actual estimate.
-                </div>
             </div>
 
             <div class="form-group">
@@ -617,7 +601,7 @@
 
                 <div class="form-group">
                     <label for="spouseSocialSecurity">Spouse's Expected Monthly Social Security
-                        <div class="label-hint">From <a href="https://www.ssa.gov/myaccount/" target="_blank" style="color: #1976D2; font-weight: 600;">SSA.gov</a></div>
+                        <div class="label-hint">From <a href="https://www.ssa.gov/myaccount/" target="_blank" style="color: #2E5C8A; font-weight: 600;">SSA.gov</a></div>
                     </label>
                     <input type="number" id="spouseSocialSecurity" placeholder="e.g., 1200" min="0" value="0" step="100">
                 </div>
@@ -719,7 +703,7 @@
         <div class="footer">
             <div>© 2026 TeacherFinCoach. Building Wealth for Educators.</div>
             <div style="margin-top: 10px;">Educational purposes only. Not financial advice.</div>
-            <div style="margin-top: 5px;"><a href="terms.html" style="color: #667eea;">Terms & Disclaimers</a></div>
+            <div style="margin-top: 5px;"><a href="terms.html" style="color: #6BC9BC;">Terms & Disclaimers</a></div>
         </div>
     </div>
 
@@ -921,7 +905,7 @@
             } else {
                 document.getElementById('contributionHeader').textContent = 'MONTHLY CONTRIBUTION NEEDED';
                 document.getElementById('contributionAmount').innerHTML = 
-                    `<div style="font-size: 36px; font-weight: bold; color: #667eea; margin: 10px 0;">
+                    `<div style="font-size: 36px; font-weight: bold; color: #2E5C8A; margin: 10px 0;">
                         ${formatCurrency(monthlyContribution)}
                     </div>
                     <div style="margin-top: 10px;">
