Fix CSS validation errors in onboarding

--- a/onboarding.html
+++ b/onboarding.html
@@ -36,6 +36,11 @@
             font-size: 14px;
             font-weight: 500;
         }
+
+        .goal-checkbox:hover {
+            background-color: #E8F7F5;
+            border-color: #6BC9BC;
+        }
     </style>
 </head>
 <body>
@@ -185,7 +190,7 @@
                 </div>
                 
                 <div class="space-y-3">
-                    <label class="flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer hover:bg-blue-50 transition" style="hover:border-color: #6BC9BC;">
+                    <label class="goal-checkbox flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer transition">
                         <input type="checkbox" name="goals" value="understand-gap" class="mt-1 w-5 h-5" style="accent-color: #2E5C8A;">
                         <span class="ml-3 text-gray-700">
                             <strong class="block">Understand my retirement income gap</strong>
@@ -193,7 +198,7 @@
                         </span>
                     </label>
 
-                    <label class="flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer hover:bg-blue-50 transition">
+                    <label class="goal-checkbox flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer transition">
                         <input type="checkbox" name="goals" value="start-saving" class="mt-1 w-5 h-5" style="accent-color: #2E5C8A;">
                         <span class="ml-3 text-gray-700">
                             <strong class="block">Start saving with 403(b) or 457(b)</strong>
@@ -201,7 +206,7 @@
                         </span>
                     </label>
 
-                    <label class="flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer hover:bg-blue-50 transition">
+                    <label class="goal-checkbox flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer transition">
                         <input type="checkbox" name="goals" value="avoid-fees" class="mt-1 w-5 h-5" style="accent-color: #2E5C8A;">
                         <span class="ml-3 text-gray-700">
                             <strong class="block">Avoid high fees and bad investments</strong>
@@ -209,7 +214,7 @@
                         </span>
                     </label>
 
-                    <label class="flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer hover:bg-blue-50 transition">
+                    <label class="goal-checkbox flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer transition">
                         <input type="checkbox" name="goals" value="maximize-wealth" class="mt-1 w-5 h-5" style="accent-color: #2E5C8A;">
                         <span class="ml-3 text-gray-700">
                             <strong class="block">Maximize my retirement wealth</strong>
@@ -217,7 +222,7 @@
                         </span>
                     </label>
 
-                    <label class="flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer hover:bg-blue-50 transition">
+                    <label class="goal-checkbox flex items-start p-4 border-2 border-gray-300 rounded-lg cursor-pointer transition">
                         <input type="checkbox" name="goals" value="retire-early" class="mt-1 w-5 h-5" style="accent-color: #2E5C8A;">
                         <span class="ml-3 text-gray-700">
                             <strong class="block">Retire early (before 62)</strong>
