--- a/income_gap_calculator.html
+++ b/income_gap_calculator.html
@@ -741,5 +741,17 @@
             document.getElementById('results').scrollIntoView({ behavior: 'smooth', block: 'start' });
         });
     </script>
+<!-- Footer -->
+    <footer style="background: #1B3A57; color: white; padding: 32px 20px; margin-top: 48px; text-align: center;">
+        <p style="font-size: 14px; margin-bottom: 12px;">&copy; 2026 TeacherFinCoach. Building Wealth for Educators.</p>
+        <p style="font-size: 12px; color: rgba(255,255,255,0.8); margin-bottom: 8px;">
+            <strong>Educational Purposes Only:</strong> TeacherFinCoach provides general educational information about retirement planning for teachers. 
+            This content does not constitute financial, investment, tax, or legal advice.
+        </p>
+        <p style="font-size: 12px; color: rgba(255,255,255,0.7);">
+            Consult with a qualified financial advisor for personalized guidance. 
+            <a href="terms.html" style="color: #6BC9BC; text-decoration: underline;">Terms & Disclaimers</a>
+        </p>
+    </footer>    
 </body>
 </html>
