Clarify that fee impact includes lost compounding growth

--- a/vendor_fee_calculator.html
+++ b/vendor_fee_calculator.html
@@ -422,7 +422,11 @@
                 <div class="comparison-box">
                     <div class="comparison-label">COST OF HIGH FEES</div>
                     <div class="comparison-amount" id="max-difference">$0</div>
-                    <div class="comparison-note">Ultra low-cost vs. very high fee — money you'll NEVER see in retirement!</div>
+                    <div class="comparison-note">Ultra low-cost vs. very high fee — money lost to fees AND lost compounding growth</div>
+                </div>
+                
+                <div style="background: #E8F7F5; border-left: 4px solid #6BC9BC; padding: 15px; border-radius: 8px; margin-bottom: 30px; font-size: 14px; color: #2E5C8A;">
+                    <strong>Why is the difference so big?</strong> The "Total fees paid" numbers below show what you directly pay in fees. But the real cost is higher because those fees also can't compound and grow. That's why even "small" percentage differences add up to massive wealth loss over time.
                 </div>
                 
                 <div class="breakdown">
