Replace basketball emoji with custom coach logo

--- a/income_gap_calculator.html
+++ b/income_gap_calculator.html
@@ -170,13 +170,6 @@
             font-style: italic;
         }
 
-        .coach-note::before {
-            content: "🏀 Coach Marty says: ";
-            font-weight: bold;
-            font-style: normal;
-            color: #2E5C8A;
-        }
-
         .calculate-btn {
             width: 100%;
             padding: 15px;
@@ -415,7 +408,11 @@
             </div>
 
             <div class="coach-note">
-                Don't know what to enter? A common rule of thumb is 70-80% of your combined final working salaries. For example, if you and your spouse make a combined $120,000/year, that's about $7,000-$8,000/month in retirement.
+                <img src="coach-icon.jpg" alt="" style="width: 22px; height: 22px; vertical-align: middle; margin-right: 6px;">
+                <span style="font-weight: bold; color: #2E5C8A; font-style: normal;">Coach Marty says:</span>
+                <span class="coach-note-text">
+                    Don't know what to enter? A common rule of thumb is 70-80% of your combined final working salaries. For example, if you and your spouse make a combined $120,000/year, that's about $7,000-$8,000/month in retirement.
+                </span>
             </div>
 
             <div class="form-group">
@@ -467,7 +464,11 @@
             </div>
 
             <div class="coach-note">
-                Many teacher couples overlook this — your spouse's pension and savings can close a huge chunk of the gap. Include their information to see your complete household retirement picture!
+                <img src="coach-icon.jpg" alt="" style="width: 22px; height: 22px; vertical-align: middle; margin-right: 6px;">
+                <span style="font-weight: bold; color: #2E5C8A; font-style: normal;">Coach Marty says:</span>
+                <span class="coach-note-text">
+                    Many teacher couples overlook this — your spouse's pension and savings can close a huge chunk of the gap. Include their information to see your complete household retirement picture!
+                </span>
             </div>
 
             <div id="spouseSection" class="spouse-section">
@@ -552,7 +553,11 @@
                 </table>
 
                 <div class="coach-note">
-                    This projection assumes 7% annual growth. In retirement, many people shift to more conservative investments with lower returns — but also lower risk. Your actual results will vary.
+                    <img src="coach-icon.jpg" alt="" style="width: 22px; height: 22px; vertical-align: middle; margin-right: 6px;">
+                    <span style="font-weight: bold; color: #2E5C8A; font-style: normal;">Coach Marty says:</span>
+                    <span class="coach-note-text">
+                        This projection assumes 7% annual growth. In retirement, many people shift to more conservative investments with lower returns — but also lower risk. Your actual results will vary.
+                    </span>
                 </div>
             </div>
 
