--- a/dashboard.html
+++ b/dashboard.html
@@ -378,8 +378,14 @@
             };
             
             const stateName = stateNames[userData.state] || '';
-            if (stateName) {
+            const userEmail = userData.email || '';
+            
+            if (stateName && userEmail) {
+                document.getElementById('user-greeting').innerHTML = `Welcome, ${stateName} Teacher!<br><span style="font-size: 12px; color: #9CA3AF;">${userEmail}</span>`;
+            } else if (stateName) {
                 document.getElementById('user-greeting').textContent = `Welcome, ${stateName} Teacher!`;
+            } else if (userEmail) {
+                document.getElementById('user-greeting').innerHTML = `Welcome back!<br><span style="font-size: 12px; color: #9CA3AF;">${userEmail}</span>`;
             }
         }
 
