Update Module 4 name to 'How to Invest: Picking Your Funds' with bar chart icon, update language to educational tone throughout

--- a/dashboard.html
+++ b/dashboard.html
@@ -219,8 +219,8 @@
                             <div class="module-number locked">4</div>
                             <span class="badge-locked">🔒 Locked</span>
                         </div>
-                        <h3 style="font-size: 18px; font-weight: 600; color: #111827; margin-bottom: 8px;">Choosing the Right Vendor</h3>
-                        <p style="font-size: 14px; color: #6B7280;">Which low-cost vendors to choose and which to avoid</p>
+                        <h3 style="font-size: 18px; font-weight: 600; color: #111827; margin-bottom: 8px;">How to Invest: Picking Your Funds</h3>
+                        <p style="font-size: 14px; color: #6B7280;">Common approaches to building your portfolio with index funds</p>
                     </div>
 
                     <!-- Module 5 - LOCKED -->
