--- a/module3.html
+++ b/module3.html
@@ -959,7 +959,7 @@
                     <div class="step-number">4</div>
                     <div class="step-content">
                         <div class="step-title">Move to Module 4</div>
-                        <div class="step-description">In the next module, we'll dive deeper into what makes a green light vendor good and how to evaluate specific investment options.</div>
+                        <div class="step-description">In the next module, we'll cover how to pick your funds and build a simple portfolio once you've chosen your vendor.</div>
                     </div>
                 </div>
             </div>
@@ -1109,7 +1109,7 @@
         <!-- Navigation Footer -->
         <div class="navigation-footer">
             <a href="module2.html" class="nav-button secondary">← Previous: Module 2</a>
-            <a href="module4.html" class="nav-button primary">Next: Module 4 →</a>
+            <a href="module4.html" class="nav-button primary">Next: How to Invest: Picking Your Funds →</a>
         </div>
     </div>
     
