--- a/module2.html
+++ b/module2.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2E5C8A 0%, #1B3A57 100%);
             min-height: 100vh;
             padding: 20px;
             line-height: 1.6;
@@ -30,7 +30,7 @@
 
         .back-link {
             display: inline-block;
-            color: #667eea;
+            color: #2E5C8A;
             text-decoration: none;
             margin-bottom: 20px;
             font-weight: 500;
@@ -46,7 +46,7 @@
         }
 
         .module-number {
-            color: #667eea;
+            color: #2E5C8A;
             font-size: 16px;
             font-weight: 600;
             text-transform: uppercase;
@@ -73,7 +73,7 @@
         }
 
         .progress-fill {
-            background: linear-gradient(90deg, #667eea, #764ba2);
+            background: linear-gradient(90deg, #2E5C8A, #6BC9BC);
             height: 100%;
             width: 0%;
             transition: width 0.5s ease;
@@ -87,12 +87,12 @@
             color: #333;
             font-size: 26px;
             margin-bottom: 20px;
-            border-bottom: 3px solid #667eea;
+            border-bottom: 3px solid #2E5C8A;
             padding-bottom: 10px;
         }
 
         .content-section h3 {
-            color: #667eea;
+            color: #2E5C8A;
             font-size: 20px;
             margin: 25px 0 15px 0;
         }
@@ -132,7 +132,7 @@
         }
 
         .comparison-table th {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2E5C8A 0%, #6BC9BC 100%);
             color: white;
             padding: 15px;
             font-size: 18px;
@@ -183,7 +183,7 @@
         }
 
         .calculator-cta {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2E5C8A 0%, #6BC9BC 100%);
             color: white;
             padding: 30px;
             border-radius: 12px;
@@ -206,7 +206,7 @@
         .calculator-btn {
             display: inline-block;
             background: white;
-            color: #667eea;
+            color: #2E5C8A;
             padding: 15px 40px;
             border-radius: 8px;
             text-decoration: none;
@@ -305,7 +305,7 @@
         .submit-quiz-btn {
             width: 100%;
             padding: 15px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2E5C8A 0%, #6BC9BC 100%);
             color: white;
             border: none;
             border-radius: 8px;
@@ -782,17 +782,5 @@
             resultDiv.scrollIntoView({ behavior: 'smooth', block: 'center' });
         });
     </script>
-<!-- Footer -->
-    <footer style="background: #1B3A57; color: white; padding: 32px 20px; margin-top: 48px; text-align: center;">
-        <p style="font-size: 14px; margin-bottom: 12px;">&copy; 2026 TeacherFinCoach. Building Wealth for Educators.</p>
-        <p style="font-size: 12px; color: rgba(255,255,255,0.8); margin-bottom: 8px;">
-            <strong>Educational Purposes Only:</strong> TeacherFinCoach provides general educational information about retirement planning for teachers. 
-            This content does not constitute financial, investment, tax, or legal advice.
-        </p>
-        <p style="font-size: 12px; color: rgba(255,255,255,0.7);">
-            Consult with a qualified financial advisor for personalized guidance. 
-            <a href="terms.html" style="color: #6BC9BC; text-decoration: underline;">Terms & Disclaimers</a>
-        </p>
-    </footer>    
 </body>
 </html>
